@@ -151,6 +151,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-561 HCatClient should differentiate between "partition not available" and other generic errors.(mithunr via avandana)
+
   HCAT-563 hcat script should look in the correct dir for the storage handler jars (arpitgupta via khorgath)
 
   HCAT-559 Fix trivial build warnings in HCat trunk (mithunr via avandana)
